--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>Hey Bro</h1>
 	<ul>
 		<li>Suraj Bhat</li>
-		<li>Rohan Bhat</li>
+		<li>he is Rohan Bhat</li>
 		<li>Priyansh Sharma</li>
 	</ul>
 
